--- a/minilang/package.yaml
+++ b/minilang/package.yaml
@@ -46,7 +46,7 @@ library:
 
 
 executables:
-  minilang-exe:
+  mli:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
