evaluate and normalize expression from CLI

--- a/minilang/package.yaml
+++ b/minilang/package.yaml
@@ -36,6 +36,7 @@ library:
   exposed-modules:
   - Minilang.Parser
   - Minilang.Eval
+  - Minilang.Normalize
   - Minilang.REPL
   dependencies:
   - base
