run typechecker in monadic context to trace execution and report errors

--- a/minilang/package.yaml
+++ b/minilang/package.yaml
@@ -37,11 +37,14 @@ library:
   - Minilang.Parser
   - Minilang.Eval
   - Minilang.Normalize
+  - Minilang.Type
   - Minilang.REPL
   dependencies:
   - base
   - containers
+  - concurrency
   - directory
+  - exceptions
   - mtl
   - parsec
   - text
