--- a/minilang/package.yaml
+++ b/minilang/package.yaml
@@ -40,6 +40,7 @@ library:
   - Minilang.Normalize
   - Minilang.Type
   - Minilang.REPL
+  - Minilang.Primitives
   dependencies:
   - base
   - containers
