--- a/minilang/package.yaml
+++ b/minilang/package.yaml
@@ -28,12 +28,16 @@ default-extensions:
 - FlexibleInstances
 - MultiParamTypeClasses
 - FlexibleContexts
+- RecordWildCards
+- NamedFieldPuns
 
-ghc-options: -Wall -Werror
+ghc-options: -Wall -fno-warn-orphans -Werror
 
 library:
   source-dirs: src
   dependencies:
+  - aeson
+  - async
   - base
   - bytestring
   - containers
@@ -47,6 +51,9 @@ library:
   - prettyprinter
   - text
   - unix
+  - wai
+  - wai-websockets
+  - warp
   - websockets
 
 
@@ -73,6 +80,8 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
+    - aeson
+    - async
     - base
     - directory
     - filepath
@@ -80,7 +89,11 @@ tests:
     - haskeline
     - hspec
     - hspec-discover
+    - http-types
     - parsec
     - QuickCheck
     - text
     - unix
+    - wai
+    - warp
+    - websockets
