--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -17,7 +17,9 @@ default-extensions:
   - OverloadedStrings
 
 dependencies:
+  - array
   - base >= 4.9 && < 5
+  - bytestring
   - mtl
   - text
 
