define correct-by-construction NIR type and introduce parser

--- a/atbordeaux2020/package.yaml
+++ b/atbordeaux2020/package.yaml
@@ -16,8 +16,10 @@ default-extensions:
 dependencies:
   - array
   - base >= 4.9 && < 5
+  - basement
   - bytestring
   - mtl
+  - parsec
   - text
 
 library:
