Upgrade stack to 18.24
* Requires GHC 8.10.7
* Also add hie.yaml to help hls

--- a/minilang/package.yaml
+++ b/minilang/package.yaml
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on Github at <https://github.com/githubuser/minilang#readme>
+description:         Please see the README on Github at <https://github.com/abailly/xxi-century-typed/minilang#readme>
 
 default-extensions:
 - DeriveGeneric
@@ -27,6 +27,7 @@ default-extensions:
 - FlexibleContexts
 - RecordWildCards
 - NamedFieldPuns
+- GeneralizedNewtypeDeriving
 
 ghc-options: -Wall -fno-warn-orphans -Werror
 
