Improve DevFest version of NIR

--- a/devfestnantes2022/package.yaml
+++ b/devfestnantes2022/package.yaml
@@ -28,9 +28,10 @@ dependencies:
   - parsec
   - text
 
-library:
+tests:
+ nir-test:
   source-dirs: .
-  exposed-modules: NIR
+  main: NIR.hs
   dependencies:
   - hspec
   - QuickCheck
